--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -62,3 +62,22 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup-inner {
+  background: white;
+  padding: 20px;
+  border-radius: 15px;
+  position: relative;
+}
